--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,28 @@ h1{
 h2{
   margin: 0 auto;
 }
+#timer{
+  margin:0 auto;
+  font-size:50px;
+  color:red;
+  text-align:center;
+}
+#player1score{
+  margin:0 auto;
+  font-size:30px;
+  color:green;
+  text-align:center;
+  display:inline-block;
+  padding-right:5px;
+}
+#player2score{
+  margin:0 auto;
+  font-size:30px;
+  color:blue;
+  text-align:center;
+  display:inline-block;
+  padding-left:5px;
+}
 #container{
   height:600px;
   width:600px;
