--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,11 @@
 h1{
   margin:0 auto;
+  text-align:center;
 }
+
 h2{
   margin: 0 auto;
+  text-align:center;
 }
 #timer{
   margin:0 auto;
@@ -27,9 +30,9 @@ h2{
   padding-left:5px;
 }
 #container{
-  height:450px;
+  height:600px;
   width:600px;
-  border: 1px solid black;
+  border: 5px solid black;
   margin:0 auto;
   padding:5px;
 }
@@ -37,17 +40,20 @@ h2{
   height:300px;
   width:400px;
   float:right;
+  border:1px solid #eaeaea
 }
 #gameInfo{
   display: inline-block;
   height:300px;
   width:190px;
+  border: 1px solid black;
 }
 #inputContainer{
   display:inline-block;
-  height:200px;
+  height:75px;
   width:100%;
   margin: 0 auto;
+  border: 1px solid black;
 }
 input{
   /*height:100%;*/
