--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,6 @@ h2{
   width:600px;
   border: 5px solid black;
   margin:0 auto;
-  padding:5px;
 }
 #topSecretDoc{
   height:300px;
@@ -51,7 +50,7 @@ h2{
 #inputContainer{
   display:inline-block;
   height:75px;
-  width:100%;
+  width:600px;
   margin: 0 auto;
   border: 1px solid black;
 }
@@ -59,6 +58,7 @@ input{
   /*height:100%;*/
   width:100%;
 }
+
 #leakBtn{
   height:25px;
   width:100px;
@@ -85,5 +85,5 @@ input{
 }
 #textInput{
   height:75px;
-  width:50%;
+  width:590px;
 }
