--- a/styles.css
+++ b/styles.css
@@ -1,89 +1,49 @@
+body{
+  background-color: #000;
+  font-family: courier, monospace;
+  color: #fff;
+}
 h1{
   margin:0 auto;
-  text-align:center;
+  font-size:60px
 }
 
-h2{
-  margin: 0 auto;
-  text-align:center;
-}
 #timer{
   margin:0 auto;
   font-size:50px;
   color:red;
-  text-align:center;
 }
 #player1score{
-  margin:0 auto;
-  font-size:30px;
-  color:green;
-  text-align:center;
-  display:inline-block;
-  padding-right:5px;
+  font-family: courier, monospace;
+  font-size: 50px;
+
 }
 #player2score{
-  margin:0 auto;
-  font-size:30px;
-  color:blue;
-  text-align:center;
-  display:inline-block;
-  padding-left:5px;
+  font-family: courier, monospace;
+  font-size: 50px;
 }
 #container{
   height:600px;
   width:600px;
-  border: 5px solid black;
-  margin:0 auto;
 }
 #topSecretDoc{
-  height:300px;
-  width:400px;
-  float:right;
-  border:1px solid #eaeaea
-}
-#gameInfo{
-  display: inline-block;
-  height:300px;
-  width:190px;
-  border: 1px solid black;
-}
-#inputContainer{
-  display:inline-block;
-  height:75px;
-  width:600px;
-  margin: 0 auto;
-  border: 1px solid black;
-}
-input{
-  /*height:100%;*/
-  width:100%;
-}
-
-#leakBtn{
-  height:25px;
-  width:100px;
-  font-weight:bold;
-  color: white;
-  background-color:blue;
-}
-#resetBtn{
-  height:25px;
-  width:100px;
-  font-weight:bold;
-  color: white;
-  background-color:red;
-}
-#strtBtn{
-  display:inline-block;
-  height:50px;
-  width:100px;
-  color:white;
-  font-weight:bold;
-  background-color:green;
-  margin:0 auto;
-  text-align:center;
+  border:1px solid #eaeaea;
+  font-size: 20px;
 }
 #textInput{
-  height:75px;
-  width:590px;
+  font-family: courier, monospace;
+  font-size:16px;
+}
+#gameInfo{
+border: 1px solid black;
+font-family: courier, monospace;
+}
+input{
+}
+
+#resetBtn{
+  font-family: courier, monospace;
+}
+#strtBtn{
+  font-family: courier, monospace;
 }
